--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
         <title>Dog Walker 2000</title>
+        
     </head>
     <body>
         <h1>Hello World!</h1>
+    <script type="text/javascript" src="src/index.js"></script>
     </body>
 </html>
