linked stylesheet to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Dog Walker 2000</title>
-        
+        <link rel="stylesheet" href="index.css" />
     </head>
     <body>
         <h1>Hello World!</h1>
