added keydown event listener so the dog moves 10px to the left when a key is pressed, set the initial style.left to 100px for now

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <div id = "dogImg"></div>
     <script type="text/javascript" src="src/index.js"></script>
     </body>
 </html>
