added a select tag to the body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <body>
         <h1>Hello World!</h1>
         <div id = "dogImg"></div>
+        <select id="dogDropDown">
+        </select>
     <script type="text/javascript" src="src/index.js"></script>
     </body>
 </html>
