changed the select so it now includes the names of the dog breeds, added - + buttons that slow/speed up the dog image's movement speed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <body>
         <h1>Hello World!</h1>
         <div id = "dogImg"></div>
+        <h2>Select Dog:</h2>
         <select id="dogDropDown">
         </select>
+        <h2>Change Walking Speed:</h2>
+        <button id="slower">-</button>
+        <button id="faster">+</button>
     <script type="text/javascript" src="src/index.js"></script>
     </body>
 </html>
