--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <img id="dogGif1" src="images/DOG-C.GIF">
         <div id = "dogImg"></div>
         <h2>Select Dog:</h2>
         <select id="dogDropDown">
