adds meta charset=UTF-8 to html head tag to make bone emojis appear as emojis instead of text

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Dog Walker 2000</title>
         <link rel="stylesheet" href="index.css" />
         <script type="text/javascript" src="src/index.js"></script>
+        <meta charset="UTF-8">
+
     </head>
     <body>
         <h1>Hello World!</h1>
@@ -15,6 +17,6 @@
         <h2>Change Walking Speed:</h2>
         <button id="slower">-</button>
         <button id="faster">+</button>
-    
+        
     </body>
 </html>
