creates 'ui' class for ui elements, sets its position to sticky in css

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <img id="dogGif1" src="images/DOG-C.GIF">
+        <h1 class="ui">Hello World!</h1>
+        <img id="dogGif1" src="images/DOG-C.GIF" class="ui">
         <div id = "dogImg"></div>
-        <h2>Select Dog:</h2>
-        <select id="dogDropDown">
+        <h2 class="ui">Select Dog:</h2>
+        <select id="dogDropDown" class="ui">
         </select>
-        <h2>Change Walking Speed:</h2>
-        <button id="slower">-</button>
-        <button id="faster">+</button>
+        <h2 class="ui">Change Walking Speed:</h2>
+        <button id="slower" class="ui">-</button>
+        <button id="faster" class="ui">+</button>
         
     </body>
 </html>
