adds audio tag (no source yet tho) to html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <h2 class="ui">Change Walking Speed:</h2>
         <button id="slower" class="ui">-</button>
         <button id="faster" class="ui">+</button>
-        
+        <audio id="munch">
+            <source src="" type="audio/mp3">
+        </audio>
     </body>
 </html>
