--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1 class="ui">Hello World!</h1>
+        <h1 class="ui">DOG WALKER 2000</h1>
         <img id="dogGif1" src="images/DOG-C.GIF" class="ui">
         <div id = "dogImg"></div>
         <h2 class="ui">Select Dog:</h2>
