replaces purring with audio of my dog chewing an apple

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button id="slower" class="ui">-</button>
         <button id="faster" class="ui">+</button>
         <audio id="munch">
-            <source src="audio/purrr_copy.mp3" type="audio/mp3">
+            <source src="audio/guinness_apple_chew.mp3" type="audio/mp3">
         </audio>
     </body>
 </html>
